task somewhat completed

--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,131 @@
     />
   </head>
   <body>
-    <h1>Calendar</h1>
+    <div class="calendar calendar--start-day-sun calendar--month-length-31">
+      <div
+        class="calendar__day calendar__day--1"
+        data-day="1"
+      ></div>
+      <div
+        class="calendar__day calendar__day--2"
+        data-day="2"
+      ></div>
+      <div
+        class="calendar__day calendar__day--3"
+        data-day="3"
+      ></div>
+      <div
+        class="calendar__day calendar__day--4"
+        data-day="4"
+      ></div>
+      <div
+        class="calendar__day calendar__day--5"
+        data-day="5"
+      ></div>
+      <div
+        class="calendar__day calendar__day--6"
+        data-day="6"
+      ></div>
+      <div
+        class="calendar__day calendar__day--7"
+        data-day="7"
+      ></div>
+      <div
+        class="calendar__day calendar__day--8"
+        data-day="8"
+      ></div>
+      <div
+        class="calendar__day calendar__day--9"
+        data-day="9"
+      ></div>
+      <div
+        class="calendar__day calendar__day--10"
+        data-day="10"
+      ></div>
+      <div
+        class="calendar__day calendar__day--11"
+        data-day="11"
+      ></div>
+      <div
+        class="calendar__day calendar__day--12"
+        data-day="12"
+      ></div>
+      <div
+        class="calendar__day calendar__day--13"
+        data-day="13"
+      ></div>
+      <div
+        class="calendar__day calendar__day--14"
+        data-day="14"
+      ></div>
+      <div
+        class="calendar__day calendar__day--15"
+        data-day="15"
+      ></div>
+      <div
+        class="calendar__day calendar__day--16"
+        data-day="16"
+      ></div>
+      <div
+        class="calendar__day calendar__day--17"
+        data-day="17"
+      ></div>
+      <div
+        class="calendar__day calendar__day--18"
+        data-day="18"
+      ></div>
+      <div
+        class="calendar__day calendar__day--19"
+        data-day="19"
+      ></div>
+      <div
+        class="calendar__day calendar__day--20"
+        data-day="20"
+      ></div>
+      <div
+        class="calendar__day calendar__day--21"
+        data-day="21"
+      ></div>
+      <div
+        class="calendar__day calendar__day--22"
+        data-day="22"
+      ></div>
+      <div
+        class="calendar__day calendar__day--23"
+        data-day="23"
+      ></div>
+      <div
+        class="calendar__day calendar__day--24"
+        data-day="24"
+      ></div>
+      <div
+        class="calendar__day calendar__day--25"
+        data-day="25"
+      ></div>
+      <div
+        class="calendar__day calendar__day--26"
+        data-day="26"
+      ></div>
+      <div
+        class="calendar__day calendar__day--27"
+        data-day="27"
+      ></div>
+      <div
+        class="calendar__day calendar__day--28"
+        data-day="28"
+      ></div>
+      <div
+        class="calendar__day calendar__day--29"
+        data-day="29"
+      ></div>
+      <div
+        class="calendar__day calendar__day--30"
+        data-day="30"
+      ></div>
+      <div
+        class="calendar__day calendar__day--31"
+        data-day="31"
+      ></div>
+    </div>
   </body>
 </html>
