left only the required classes for day numbers in html, line 81 in scss cannot pass the stylelint if removed

--- a/src/index.html
+++ b/src/index.html
@@ -15,111 +15,111 @@
   <body>
     <div class="calendar calendar--start-day-sun calendar--month-length-31">
       <div
-        class="calendar__day calendar__day--1"
+        class="calendar__day"
         data-day="1"
       ></div>
       <div
-        class="calendar__day calendar__day--2"
+        class="calendar__day"
         data-day="2"
       ></div>
       <div
-        class="calendar__day calendar__day--3"
+        class="calendar__day"
         data-day="3"
       ></div>
       <div
-        class="calendar__day calendar__day--4"
+        class="calendar__day"
         data-day="4"
       ></div>
       <div
-        class="calendar__day calendar__day--5"
+        class="calendar__day"
         data-day="5"
       ></div>
       <div
-        class="calendar__day calendar__day--6"
+        class="calendar__day"
         data-day="6"
       ></div>
       <div
-        class="calendar__day calendar__day--7"
+        class="calendar__day" 
         data-day="7"
       ></div>
       <div
-        class="calendar__day calendar__day--8"
+        class="calendar__day"
         data-day="8"
       ></div>
       <div
-        class="calendar__day calendar__day--9"
+        class="calendar__day"
         data-day="9"
       ></div>
       <div
-        class="calendar__day calendar__day--10"
+        class="calendar__day"
         data-day="10"
       ></div>
       <div
-        class="calendar__day calendar__day--11"
+        class="calendar__day"
         data-day="11"
       ></div>
       <div
-        class="calendar__day calendar__day--12"
+        class="calendar__day"
         data-day="12"
       ></div>
       <div
-        class="calendar__day calendar__day--13"
+        class="calendar__day"
         data-day="13"
       ></div>
       <div
-        class="calendar__day calendar__day--14"
+        class="calendar__day"
         data-day="14"
       ></div>
       <div
-        class="calendar__day calendar__day--15"
+        class="calendar__day"
         data-day="15"
       ></div>
       <div
-        class="calendar__day calendar__day--16"
+        class="calendar__day"
         data-day="16"
       ></div>
       <div
-        class="calendar__day calendar__day--17"
+        class="calendar__day"
         data-day="17"
       ></div>
       <div
-        class="calendar__day calendar__day--18"
+        class="calendar__day"
         data-day="18"
       ></div>
       <div
-        class="calendar__day calendar__day--19"
+        class="calendar__day"
         data-day="19"
       ></div>
       <div
-        class="calendar__day calendar__day--20"
+        class="calendar__day"
         data-day="20"
       ></div>
       <div
-        class="calendar__day calendar__day--21"
+        class="calendar__day"
         data-day="21"
       ></div>
       <div
-        class="calendar__day calendar__day--22"
+        class="calendar__day"
         data-day="22"
       ></div>
       <div
-        class="calendar__day calendar__day--23"
+        class="calendar__day"
         data-day="23"
       ></div>
       <div
-        class="calendar__day calendar__day--24"
+        class="calendar__day"
         data-day="24"
       ></div>
       <div
-        class="calendar__day calendar__day--25"
+        class="calendar__day"
         data-day="25"
       ></div>
       <div
-        class="calendar__day calendar__day--26"
+        class="calendar__day"
         data-day="26"
       ></div>
       <div
-        class="calendar__day calendar__day--27"
+        class="calendar__day"
         data-day="27"
       ></div>
       <div
