--- a/src/index.html
+++ b/src/index.html
@@ -14,37 +14,37 @@
   </head>
   <body>
     <div class="calendar">
-      <div class="calendar_day"></div>
-      <div class="calendar_day"></div>
-      <div class="calendar_day"></div>
-      <div class="calendar_day"></div>
-      <div class="calendar_day"></div>
-      <div class="calendar_day"></div>
-      <div class="calendar_day"></div>
-      <div class="calendar_day"></div>
-      <div class="calendar_day"></div>
-      <div class="calendar_day"></div>
-      <div class="calendar_day"></div>
-      <div class="calendar_day"></div>
-      <div class="calendar_day"></div>
-      <div class="calendar_day"></div>
-      <div class="calendar_day"></div>
-      <div class="calendar_day"></div>
-      <div class="calendar_day"></div>
-      <div class="calendar_day"></div>
-      <div class="calendar_day"></div>
-      <div class="calendar_day"></div>
-      <div class="calendar_day"></div>
-      <div class="calendar_day"></div>
-      <div class="calendar_day"></div>
-      <div class="calendar_day"></div>
-      <div class="calendar_day"></div>
-      <div class="calendar_day"></div>
-      <div class="calendar_day"></div>
-      <div class="calendar_day"></div>
-      <div class="calendar_day"></div>
-      <div class="calendar_day"></div>
-      <div class="calendar_day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
     </div>
   </body>
 </html>
