--- a/src/index.html
+++ b/src/index.html
@@ -13,42 +13,38 @@
     />
   </head>
   <body>
-    <div class="calendar">
-      <div
-        class="calendar__field calendar__field--start-sun calendar__field--month-length-31"
-      >
-        <div class="calendar__cell"></div>
-        <div class="calendar__cell"></div>
-        <div class="calendar__cell"></div>
-        <div class="calendar__cell"></div>
-        <div class="calendar__cell"></div>
-        <div class="calendar__cell"></div>
-        <div class="calendar__cell"></div>
-        <div class="calendar__cell"></div>
-        <div class="calendar__cell"></div>
-        <div class="calendar__cell"></div>
-        <div class="calendar__cell"></div>
-        <div class="calendar__cell"></div>
-        <div class="calendar__cell"></div>
-        <div class="calendar__cell"></div>
-        <div class="calendar__cell"></div>
-        <div class="calendar__cell"></div>
-        <div class="calendar__cell"></div>
-        <div class="calendar__cell"></div>
-        <div class="calendar__cell"></div>
-        <div class="calendar__cell"></div>
-        <div class="calendar__cell"></div>
-        <div class="calendar__cell"></div>
-        <div class="calendar__cell"></div>
-        <div class="calendar__cell"></div>
-        <div class="calendar__cell"></div>
-        <div class="calendar__cell"></div>
-        <div class="calendar__cell"></div>
-        <div class="calendar__cell"></div>
-        <div class="calendar__cell"></div>
-        <div class="calendar__cell"></div>
-        <div class="calendar__cell"></div>
-      </div>
+    <div class="calendar calendar--start-day-sun calendar--month-length-31">
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
     </div>
   </body>
 </html>
