--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,50 @@
     />
   </head>
   <body>
-    <h1>Calendar</h1>
+    <div class="calendar">
+      <ul class="calendar__week1">
+        <li class="calendar__day calendar__day--sunday"></li>
+      </ul>
+      <ul class="calendar__week2">
+        <li class="calendar__day calendar__day--monday"></li>
+        <li class="calendar__day calendar__day--tuesday"></li>
+        <li class="calendar__day calendar__day--wednesday"></li>
+        <li class="calendar__day calendar__day--thursday"></li>
+        <li class="calendar__day calendar__day--friday"></li>
+        <li class="calendar__day calendar__day--saturday"></li>
+        <li class="calendar__day calendar__day--sunday"></li>
+      </ul>
+      <ul class="calendar__week3">
+        <li class="calendar__day calendar__day--monday"></li>
+        <li class="calendar__day calendar__day--tuesday"></li>
+        <li class="calendar__day calendar__day--wednesday"></li>
+        <li class="calendar__day calendar__day--thursday"></li>
+        <li class="calendar__day calendar__day--friday"></li>
+        <li class="calendar__day calendar__day--saturday"></li>
+        <li class="calendar__day calendar__day--sunday"></li>
+      </ul>
+      <ul class="calendar__week4">
+        <li class="calendar__day calendar__day--monday"></li>
+        <li class="calendar__day calendar__day--tuesday"></li>
+        <li class="calendar__day calendar__day--wednesday"></li>
+        <li class="calendar__day calendar__day--thursday"></li>
+        <li class="calendar__day calendar__day--friday"></li>
+        <li class="calendar__day calendar__day--saturday"></li>
+        <li class="calendar__day calendar__day--sunday"></li>
+      </ul>
+      <ul class="calendar__week5">
+        <li class="calendar__day calendar__day--monday"></li>
+        <li class="calendar__day calendar__day--tuesday"></li>
+        <li class="calendar__day calendar__day--wednesday"></li>
+        <li class="calendar__day calendar__day--thursday"></li>
+        <li class="calendar__day calendar__day--friday"></li>
+        <li class="calendar__day calendar__day--saturday"></li>
+        <li class="calendar__day calendar__day--sunday"></li>
+      </ul>
+      <ul class="calendar__week6">
+        <li class="calendar__day calendar__day--monday"></li>
+        <li class="calendar__day calendar__day--tuesday"></li>
+      </ul>
+    </div>
   </body>
 </html>
