all changes for files

--- a/src/index.html
+++ b/src/index.html
@@ -14,37 +14,37 @@
   </head>
   <body>
     <div class="calendar calendar--month-length-31 calendar--start-day-sun">
-      <div class="calendar__days"></div>
-      <div class="calendar__days"></div>
-      <div class="calendar__days"></div>
-      <div class="calendar__days"></div>
-      <div class="calendar__days"></div>
-      <div class="calendar__days"></div>
-      <div class="calendar__days"></div>
-      <div class="calendar__days"></div>
-      <div class="calendar__days"></div>
-      <div class="calendar__days"></div>
-      <div class="calendar__days"></div>
-      <div class="calendar__days"></div>
-      <div class="calendar__days"></div>
-      <div class="calendar__days"></div>
-      <div class="calendar__days"></div>
-      <div class="calendar__days"></div>
-      <div class="calendar__days"></div>
-      <div class="calendar__days"></div>
-      <div class="calendar__days"></div>
-      <div class="calendar__days"></div>
-      <div class="calendar__days"></div>
-      <div class="calendar__days"></div>
-      <div class="calendar__days"></div>
-      <div class="calendar__days"></div>
-      <div class="calendar__days"></div>
-      <div class="calendar__days"></div>
-      <div class="calendar__days"></div>
-      <div class="calendar__days"></div>
-      <div class="calendar__days"></div>
-      <div class="calendar__days"></div>
-      <div class="calendar__days"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
     </div>
   </body>
 </html>
