add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,8 @@
     />
   </head>
   <body>
-    <div class="calendar start-day-sun month-length-29">
+    <div class="calendar calendar--start-day-sun
+    calendar--month-length-29">
       <div class="calendar__field">
         <div class="calendar__day"></div>
         <div class="calendar__day"></div>
