work in progress

--- a/src/index.html
+++ b/src/index.html
@@ -13,13 +13,7 @@
     />
   </head>
   <body class="page">
-    <div class="calendar calendar--start-day--sun">
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
+    <div class="calendar calendar--start-day--sun calendar--month-length--28">
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
