Add final solution

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
     />
   </head>
   <body>
-    <div class="calendar calendar--start-sun calendar--month-31">
+    <div class="calendar calendar--start-day-sun calendar--month-length-31">
       <!-- # region calendar__day -->
       <div class="calendar__day calendar__day--1"></div>
       <div class="calendar__day calendar__day--2"></div>
