--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <div class="wrap">
-      <div class="calendar calendar--start-sun calendar--month-length-31">
+      <div class="calendar calendar--start-day-sun calendar--month-length-31">
         <div class="calendar__day"></div>
         <div class="calendar__day"></div>
         <div class="calendar__day"></div>
