add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -16,37 +16,37 @@
     <calendar
       class="calendar calendar--start-day-sun calendar--month-length-31"
     >
-      <day class="calendar__day calendar__day--1"></day>
-      <day class="calendar__day calendar__day--2"></day>
-      <day class="calendar__day calendar__day--3"></day>
-      <day class="calendar__day calendar__day--4"></day>
-      <day class="calendar__day calendar__day--5"></day>
-      <day class="calendar__day calendar__day--6"></day>
-      <day class="calendar__day calendar__day--7"></day>
-      <day class="calendar__day calendar__day--8"></day>
-      <day class="calendar__day calendar__day--9"></day>
-      <day class="calendar__day calendar__day--10"></day>
-      <day class="calendar__day calendar__day--11"></day>
-      <day class="calendar__day calendar__day--12"></day>
-      <day class="calendar__day calendar__day--13"></day>
-      <day class="calendar__day calendar__day--14"></day>
-      <day class="calendar__day calendar__day--15"></day>
-      <day class="calendar__day calendar__day--16"></day>
-      <day class="calendar__day calendar__day--17"></day>
-      <day class="calendar__day calendar__day--18"></day>
-      <day class="calendar__day calendar__day--19"></day>
-      <day class="calendar__day calendar__day--20"></day>
-      <day class="calendar__day calendar__day--21"></day>
-      <day class="calendar__day calendar__day--22"></day>
-      <day class="calendar__day calendar__day--23"></day>
-      <day class="calendar__day calendar__day--24"></day>
-      <day class="calendar__day calendar__day--25"></day>
-      <day class="calendar__day calendar__day--26"></day>
-      <day class="calendar__day calendar__day--27"></day>
-      <day class="calendar__day calendar__day--28"></day>
-      <day class="calendar__day calendar__day--29"></day>
-      <day class="calendar__day calendar__day--30"></day>
-      <day class="calendar__day calendar__day--31"></day>
+      <day class="calendar__day "></day>
+      <day class="calendar__day "></day>
+      <day class="calendar__day "></day>
+      <day class="calendar__day "></day>
+      <day class="calendar__day "></day>
+      <day class="calendar__day "></day>
+      <day class="calendar__day "></day>
+      <day class="calendar__day "></day>
+      <day class="calendar__day "></day>
+      <day class="calendar__day"></day>
+      <day class="calendar__day"></day>
+      <day class="calendar__day"></day>
+      <day class="calendar__day"></day>
+      <day class="calendar__day"></day>
+      <day class="calendar__day"></day>
+      <day class="calendar__day"></day>
+      <day class="calendar__day"></day>
+      <day class="calendar__day"></day>
+      <day class="calendar__day"></day>
+      <day class="calendar__day"></day>
+      <day class="calendar__day"></day>
+      <day class="calendar__day"></day>
+      <day class="calendar__day"></day>
+      <day class="calendar__day"></day>
+      <day class="calendar__day"></day>
+      <day class="calendar__day"></day>
+      <day class="calendar__day"></day>
+      <day class="calendar__day"></day>
+      <day class="calendar__day"></day>
+      <day class="calendar__day"></day>
+      <day class="calendar__day"></day>
     </calendar>
   </body>
 </html>
