--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,38 @@
     />
   </head>
   <body>
-    <h1>Calendar</h1>
+    <section class="calendar calendar--start-day-sun calendar--month-length-31">
+      <article class="calendar__day"></article>
+      <article class="calendar__day"></article>
+      <article class="calendar__day"></article>
+      <article class="calendar__day"></article>
+      <article class="calendar__day"></article>
+      <article class="calendar__day"></article>
+      <article class="calendar__day"></article>
+      <article class="calendar__day"></article>
+      <article class="calendar__day"></article>
+      <article class="calendar__day"></article>
+      <article class="calendar__day"></article>
+      <article class="calendar__day"></article>
+      <article class="calendar__day"></article>
+      <article class="calendar__day"></article>
+      <article class="calendar__day"></article>
+      <article class="calendar__day"></article>
+      <article class="calendar__day"></article>
+      <article class="calendar__day"></article>
+      <article class="calendar__day"></article>
+      <article class="calendar__day"></article>
+      <article class="calendar__day"></article>
+      <article class="calendar__day"></article>
+      <article class="calendar__day"></article>
+      <article class="calendar__day"></article>
+      <article class="calendar__day"></article>
+      <article class="calendar__day"></article>
+      <article class="calendar__day"></article>
+      <article class="calendar__day"></article>
+      <article class="calendar__day"></article>
+      <article class="calendar__day"></article>
+      <article class="calendar__day"></article>
+    </section>
   </body>
 </html>
