--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 
     <link
       rel="stylesheet"
-      href="styles/main.scss"
+      href="styles/index.scss"
     />
   </head>
   <body class="page">
