use ul and li, make file with veriables, use class for body

--- a/src/index.html
+++ b/src/index.html
@@ -12,39 +12,39 @@
       href="styles/index.scss"
     />
   </head>
-  <body>
-    <section class="calendar calendar--start-day-sun calendar--month-length-31">
-      <article class="calendar__day"></article>
-      <article class="calendar__day"></article>
-      <article class="calendar__day"></article>
-      <article class="calendar__day"></article>
-      <article class="calendar__day"></article>
-      <article class="calendar__day"></article>
-      <article class="calendar__day"></article>
-      <article class="calendar__day"></article>
-      <article class="calendar__day"></article>
-      <article class="calendar__day"></article>
-      <article class="calendar__day"></article>
-      <article class="calendar__day"></article>
-      <article class="calendar__day"></article>
-      <article class="calendar__day"></article>
-      <article class="calendar__day"></article>
-      <article class="calendar__day"></article>
-      <article class="calendar__day"></article>
-      <article class="calendar__day"></article>
-      <article class="calendar__day"></article>
-      <article class="calendar__day"></article>
-      <article class="calendar__day"></article>
-      <article class="calendar__day"></article>
-      <article class="calendar__day"></article>
-      <article class="calendar__day"></article>
-      <article class="calendar__day"></article>
-      <article class="calendar__day"></article>
-      <article class="calendar__day"></article>
-      <article class="calendar__day"></article>
-      <article class="calendar__day"></article>
-      <article class="calendar__day"></article>
-      <article class="calendar__day"></article>
-    </section>
+  <body class="body">
+    <ul class="calendar calendar--start-day-sun calendar--month-length-31">
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+    </ul>
   </body>
 </html>
