--- a/src/index.html
+++ b/src/index.html
@@ -13,8 +13,8 @@
     />
   </head>
   <body>
-    <div class="calendar">
-      <ul class="calendar__block">
+    <div class="calendar calendar--start-day-sun calendar--month-length-31">
+      <ul class="calendar__days">
         <li class="calendar__day"></li>
         <li class="calendar__day"></li>
         <li class="calendar__day"></li>
