add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,51 @@
     />
   </head>
   <body>
-    <h1>Calendar</h1>
+    <!-- <div class="calendar"> -->
+      <!-- <div class="calendar calendar--start-mon"></div>
+      <div class="calendar calendar--start-tue"></div>
+      <div class="calendar calendar--start-wed"></div>
+      <div class="calendar calendar--start-thu"></div>
+      <div class="calendar calendar--start-fri"></div>
+      <div class="calendar calendar--start-sat"></div> -->
+    <div class="calendar calendar--start-sun">
+
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+
+      <div class="calendar--month-length">
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+      </div>
+    </div>
   </body>
 </html>
