--- a/src/index.html
+++ b/src/index.html
@@ -13,51 +13,46 @@
     />
   </head>
   <body>
-    <!-- <div class="calendar"> -->
-      <!-- <div class="calendar calendar--start-mon"></div>
-      <div class="calendar calendar--start-tue"></div>
-      <div class="calendar calendar--start-wed"></div>
-      <div class="calendar calendar--start-thu"></div>
-      <div class="calendar calendar--start-fri"></div>
-      <div class="calendar calendar--start-sat"></div> -->
     <div class="calendar calendar--start-sun">
 
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-
-      <div class="calendar--month-length">
+      <div class="month-length">
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
         <div class="calendar__day"></div>
         <div class="calendar__day"></div>
         <div class="calendar__day"></div>
         <div class="calendar__day"></div>
       </div>
+
+      <!-- <div class="calendar__month-length">
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+      </div> -->
     </div>
   </body>
 </html>
