--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,10 @@
       href="styles/main.scss"
     />
   </head>
-  <body data-qa="calendar-body">
+  <body
+    class="page"
+    data-qa="calendar-body"
+  >
     <div class="calendar calendar--start-day-sun calendar--month-length-31">
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
