--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
     />
   </head>
   <body>
-    <div class="calendar calendar__start-day--sun calendar--month-length">
+    <div class="calendar calendar--start-day-sun calendar--month-length">
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
