--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,38 @@
     />
   </head>
   <body>
-    <h1>Calendar</h1>
+    <main class="calendar calendar--start-day-mon calendar--month-length-31">
+      <div class="calendar__date"></div>
+      <div class="calendar__date"></div>
+      <div class="calendar__date"></div>
+      <div class="calendar__date"></div>
+      <div class="calendar__date"></div>
+      <div class="calendar__date"></div>
+      <div class="calendar__date"></div>
+      <div class="calendar__date"></div>
+      <div class="calendar__date"></div>
+      <div class="calendar__date"></div>
+      <div class="calendar__date"></div>
+      <div class="calendar__date"></div>
+      <div class="calendar__date"></div>
+      <div class="calendar__date"></div>
+      <div class="calendar__date"></div>
+      <div class="calendar__date"></div>
+      <div class="calendar__date"></div>
+      <div class="calendar__date"></div>
+      <div class="calendar__date"></div>
+      <div class="calendar__date"></div>
+      <div class="calendar__date"></div>
+      <div class="calendar__date"></div>
+      <div class="calendar__date"></div>
+      <div class="calendar__date"></div>
+      <div class="calendar__date"></div>
+      <div class="calendar__date"></div>
+      <div class="calendar__date"></div>
+      <div class="calendar__date"></div>
+      <div class="calendar__date"></div>
+      <div class="calendar__date"></div>
+      <div class="calendar__date"></div>
+    </main>
   </body>
 </html>
