--- a/src/index.html
+++ b/src/index.html
@@ -14,37 +14,37 @@
   </head>
   <body>
     <main class="calendar calendar--start-day-sun calendar--month-length-31">
-      <div class="calendar__date"></div>
-      <div class="calendar__date"></div>
-      <div class="calendar__date"></div>
-      <div class="calendar__date"></div>
-      <div class="calendar__date"></div>
-      <div class="calendar__date"></div>
-      <div class="calendar__date"></div>
-      <div class="calendar__date"></div>
-      <div class="calendar__date"></div>
-      <div class="calendar__date"></div>
-      <div class="calendar__date"></div>
-      <div class="calendar__date"></div>
-      <div class="calendar__date"></div>
-      <div class="calendar__date"></div>
-      <div class="calendar__date"></div>
-      <div class="calendar__date"></div>
-      <div class="calendar__date"></div>
-      <div class="calendar__date"></div>
-      <div class="calendar__date"></div>
-      <div class="calendar__date"></div>
-      <div class="calendar__date"></div>
-      <div class="calendar__date"></div>
-      <div class="calendar__date"></div>
-      <div class="calendar__date"></div>
-      <div class="calendar__date"></div>
-      <div class="calendar__date"></div>
-      <div class="calendar__date"></div>
-      <div class="calendar__date"></div>
-      <div class="calendar__date"></div>
-      <div class="calendar__date"></div>
-      <div class="calendar__date"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
     </main>
   </body>
 </html>
