--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,15 @@
 <!doctype html>
-<html lang="en" class="page">
+<html
+  lang="en"
+  class="page"
+>
   <head>
     <meta charset="UTF-8" />
     <title>Calendar</title>
-    <link rel="stylesheet" href="styles/index.scss" />
+    <link
+      rel="stylesheet"
+      href="styles/index.scss"
+    />
   </head>
   <body>
     <div class="calendar calendar--start-day-sun calendar--month-length-31">
