--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
     />
   </head>
   <body>
-    <div class="calendar calendar--start-day-sun calendar--max-days">
+    <div class="calendar calendar--start-day-sun calendar--max-days-31">
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
