--- a/src/index.html
+++ b/src/index.html
@@ -14,10 +14,8 @@
   </head>
 
   <body>
-    <div
-      class="calendar calendar--start-day-mon calendar--start-day-tue calendar--start-day-wen calendar--start-day-thu calendar--start-day-fri calendar--start-day-set calendar--start-day-sun calendar--month-length-28 calendar--month-length-29 calendar--month-length-30 calendar--month-length-31"
-    >
-      <div class="calendar__day order"></div>
+    <div class="calendar calendar--month-length-31 calendar--start-day-sun">
+      <div class="calendar__day"></div>
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
