add task change calendar

--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,5 @@
 <!doctype html>
-<html
-  lang="en"
-  class="page"
->
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta
@@ -15,7 +12,7 @@
       href="styles/index.scss"
     />
   </head>
-  <body class="page__body">
+  <body>
     <div class="calendar calendar--start-day-sun calendar--month-length-31">
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
