--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
       href="styles/index.scss"
     />
   </head>
-  <body>
+  <body class="page">
     <ul class="calendar calendar--month-length-31 calendar--start-day-sun">
       <li class="calendar__day calendar__day--1"></li>
       <li class="calendar__day calendar__day--2"></li>
