--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
 
   <body>
     <h1>Calendar</h1>
-    <div class="block_calendar">
+    <div class="calendar_block">
       <div class="calendar calendar--month-length-31 calendar--start-day-sun">
         <div class="calendar__day"></div>
         <div class="calendar__day"></div>
