add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -9,10 +9,44 @@
     <title>Calendar</title>
     <link
       rel="stylesheet"
-      href="styles/index.scss"
+      href="styles/main.scss"
     />
   </head>
   <body>
-    <h1>Calendar</h1>
+    <main class="main">
+      <div class="calendar calendar--month-length-31 calendar--start-day-sun">
+        <ul class="calendar__day"></ul>
+        <ul class="calendar__day"></ul>
+        <ul class="calendar__day"></ul>
+        <ul class="calendar__day"></ul>
+        <ul class="calendar__day"></ul>
+        <ul class="calendar__day"></ul>
+        <ul class="calendar__day"></ul>
+        <ul class="calendar__day"></ul>
+        <ul class="calendar__day"></ul>
+        <ul class="calendar__day"></ul>
+        <ul class="calendar__day"></ul>
+        <ul class="calendar__day"></ul>
+        <ul class="calendar__day"></ul>
+        <ul class="calendar__day"></ul>
+        <ul class="calendar__day"></ul>
+        <ul class="calendar__day"></ul>
+        <ul class="calendar__day"></ul>
+        <ul class="calendar__day"></ul>
+        <ul class="calendar__day"></ul>
+        <ul class="calendar__day"></ul>
+        <ul class="calendar__day"></ul>
+        <ul class="calendar__day"></ul>
+        <ul class="calendar__day"></ul>
+        <ul class="calendar__day"></ul>
+        <ul class="calendar__day"></ul>
+        <ul class="calendar__day"></ul>
+        <ul class="calendar__day"></ul>
+        <ul class="calendar__day"></ul>
+        <ul class="calendar__day"></ul>
+        <ul class="calendar__day"></ul>
+        <ul class="calendar__day"></ul>
+      </div>
+    </main>
   </body>
 </html>
